[package]
name = "dnd-gm-helper"
version = "0.2.4"
edition = "2018"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.40"
crossterm = "0.19.0"
derive_more = "0.99.14"
indexmap = { version = "1.6.2", features = ["serde"] }
log = { version = "0.4.14", features = ["release_max_level_info"] }
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
once_cell = "1.7.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simplelog = { version = "0.10.0", default-features = false }
#tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
tui = { git = "https://github.com/SleeplessSloth/tui-rs", branch = "feature/render-by-ref", default-features = false, features = ["crossterm"] }
